<resources>
    <string name="app_name">Skourse</string>

    <string name="Homepage_title">Home</string>
    <string name="Homepage_search">Search for courses</string>
    <string name="Homepage_courseNearMe">Courses near me</string>
    <string name="Homepage_recentlyBooked">Recently booked</string>
    <string name="string_course_count">4 courses</string>

    <string name="title_activity_skourse__search">Skourse_Search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_nav_Search">Search</string>
    <string name="title_Mycourse" />
    <string name="title_MyCourse">My Course</string>
    <string name="title_Profile">Profile</string>
    <string name="btn_search">Search</string>
    <string name="btn_back"><![CDATA[<]]></string>
    <string name="plaintext_Search">Search...</string>
    <string name="Course">Course</string>
    <string name="test">Test</string>
    <string name="Search">Search</string>

    <!-- for skourse profile fragment-->
    <string name="profile_nama">Verrol</string>
    <string name="profile_role">Student</string>
    <string name="profile_title">Account Info</string>
    <string name="profile_fullName">Full Name</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_email">Email</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_city">City</string>
    <string name="profile_address">Address</string>
    <string name="profile_favourite">Favourite</string>
    <string name="profile_editProfile">Edit Profile</string>
    <string name="menuProfile_title">PROFILE MENU</string>
    <string name="btn_myProfile">My Profile</string>

    <!-- for login register -->
    <string name="prefLoginState">loginstate</string>

</resources>
