<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_Home">

    <fragment
        android:id="@+id/navigation_Home"
        android:name="com.example.skourse.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_Search"
        android:name="com.example.skourse.ui.mycouse.MyCourseFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_mycourse" />

    <fragment
        android:id="@+id/navigation_myCourse"
        android:name="com.example.skourse.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_Profile" />
</navigation>