<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Skourse_Homepage">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Homepage_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_search"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/edit_text"
        android:text="@string/Homepage_search"
        android:textAlignment="textStart"
        android:textColor="#999797"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <ImageView
        android:id="@+id/imageView_iconSearch"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_search"
        app:layout_constraintEnd_toEndOf="@+id/button_search"
        app:layout_constraintTop_toTopOf="@+id/button_search"
        app:srcCompat="@android:drawable/ic_search_category_default" />

    <TextView
        android:id="@+id/textView_courseNearMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Homepage_courseNearMe"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/button_search"
        app:layout_constraintTop_toBottomOf="@+id/button_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_courseNearMe" />

</androidx.constraintlayout.widget.ConstraintLayout>