<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/scrollView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/Homepage_title"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_search"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/edit_text"
                android:fontFamily="@font/pt_sans"
                android:text="@string/Homepage_search"
                android:textAlignment="textStart"
                android:textColor="#999797"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title" />

            <ImageView
                android:id="@+id/imageView_iconSearch"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/button_search"
                app:layout_constraintEnd_toEndOf="@+id/button_search"
                app:layout_constraintTop_toTopOf="@+id/button_search"
                app:srcCompat="@android:drawable/ic_search_category_default" />

            <TextView
                android:id="@+id/textView_courseNearMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/Homepage_courseNearMe"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/button_search"
                app:layout_constraintTop_toBottomOf="@+id/RecyclerView_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView_course"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_course_count">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView_recentlyBooked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/Homepage_recentlyBooked"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/textView_courseNearMe"
                app:layout_constraintTop_toBottomOf="@+id/RecyclerView_course" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView_recentlyBooked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_recentlyBooked" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView_category"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_search" />

            <TextView
                android:id="@+id/textView_course_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_course_count"
                app:layout_constraintStart_toStartOf="@+id/textView_courseNearMe"
                app:layout_constraintTop_toBottomOf="@+id/textView_courseNearMe" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>